Update DEEP EX 2.ipynb

--- a/DEEP EX 2.ipynb
+++ b/DEEP EX 2.ipynb
@@ -407,8 +407,8 @@
     "    predicted_class_index = torch.argmax(output[0]).item()\n",
     "    predicted_class_label = iris.target_names[predicted_class_index]\n",
     "\n",
-    "print(\"\\nName: FARHANA H\")\n",
-    "print(\"Register No: 212223230057\")\n",
+    "print(\"\\nName: PAVITHRA S\")\n",
+    "print(\"Register No: 212223230147\")\n",
     "print(f'Predicted class for sample input: {predicted_class_label}')\n",
     "print(f'Actual class for sample input: {iris.target_names[y_test[5].item()]}')\n",
     "\n"
