Update DEEP EX 2.ipynb

--- a/DEEP EX 2.ipynb
+++ b/DEEP EX 2.ipynb
@@ -321,8 +321,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Name: FARHANA H\n",
-      "Register No: 212223230057\n",
+      "Name: PAVITHRA S\n",
+      "Register No: 212223230147\n",
       "Test Accuracy: 1.00%\n",
       "Confusion Matrix:\n",
       " [[10  0  0]\n",
@@ -344,8 +344,8 @@
    ],
    "source": [
     "# Print details\n",
-    "print(\"\\nName: FARHANA H\")\n",
-    "print(\"Register No: 212223230057\")\n",
+    "print(\"\\nName: PAVITHRA S\")\n",
+    "print(\"Register No: 212223230147\")\n",
     "print(f'Test Accuracy: {accuracy:.2f}%')\n",
     "print(\"Confusion Matrix:\\n\", conf_matrix)\n",
     "print(\"Classification Report:\\n\", class_report)\n"
@@ -391,8 +391,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Name: FARHANA H\n",
-      "Register No: 212223230057\n",
+      "Name: PAVITHRA S\n",
+      "Register No: 212223230147\n",
       "Predicted class for sample input: setosa\n",
       "Actual class for sample input: setosa\n"
      ]
